Added redis server to cache container

--- a/nuapp/Dockerfile
+++ b/nuapp/Dockerfile
@@ -1,14 +1,16 @@
 # Set the base image to Ubuntu
-FROM base/archlinux 
+FROM redis 
 # File Author / Maintainer
 MAINTAINER Ben Berg
 
-ADD mirrorlist /etc/pacman.d/
+# Update the sources list
+RUN apt-get update
+RUN apt-get -qq install -y memcached python python-pip git curl socat net-tools emacs-nox tar procps
 
-RUN pacman -Syy
-RUN pacman -S --noconfirm memcached python2 python2-pip git curl go socat net-tools emacs-nox
-
-RUN ln -s /usr/bin/python2 /usr/bin/python
+RUN cd /usr/local && curl -O https://storage.googleapis.com/golang/go1.8.linux-amd64.tar.gz
+RUN cd /usr/local && tar -xvf go1.8.linux-amd64.tar.gz
+ENV PATH=$PATH:/usr/local/go/bin
+RUN echo $PATH
 
 ADD ./src /nuapp/src
 ADD ./start.sh /nuapp/start.sh
