--- a/nuapp/Dockerfile
+++ b/nuapp/Dockerfile
@@ -1,15 +1,16 @@
 # Set the base image to Ubuntu
 FROM ubuntu:18.04
 # File Author / Maintainer
-MAINTAINER Ben Berg
+MAINTAINER Utkarsh
 ENV DEBIAN_FRONTEND=noninteractive
 # Update the sources list
 RUN apt-get update
-RUN apt-get -qq install -y memcached python python-pip git curl socat net-tools emacs-nox tar procps
+RUN apt-get -qq install -y git curl socat net-tools emacs-nox tar procps
 RUN apt-get -qq install -y build-essential tcl
-RUN cd /tmp && curl -O http://download.redis.io/redis-stable.tar.gz
-RUN cd /tmp && tar xzvf redis-stable.tar.gz
-RUN cd /tmp/redis-stable && make && make install
+WORKDIR /tmp
+RUN git clone https://github.com/utkarsh39/redis.git
+RUN cd redis && git checkout group_get
+RUN cd redis && make && make install
 RUN mkdir /etc/redis
 RUN cp /tmp/redis-stable/redis.conf /etc/redis
 
@@ -30,6 +31,5 @@ RUN GOPATH=$(pwd) CGO_ENABLED=0 go build appserver
 # EXPOSE 6379
 # EXPOSE 27001-27064
 EXPOSE 80
-RUN pip2 install -r /nuapp/src/requirements.txt
 
 CMD ./start.sh
