--- a/go/Dockerfile_requestor
+++ b/go/Dockerfile_requestor
@@ -13,5 +13,9 @@ RUN go-wrapper install requestor   # "go install -v ./..."
 
 WORKDIR /boot
 COPY ./trace.json  .
+
+WORKDIR /config
+COPY ./config .
+
 WORKDIR /go/src
 CMD ./start_requestor.sh
